# ai-developer-training

./: .env.example  .gitignore  README.md  pyproject.toml
session-1-foundations-prompt-engineering/: facilitator-guide.md  hol-lab.ipynb  hol-plan.md  setup.md
session-2-rag-retrieval/: facilitator-guide.md  hol-lab.ipynb  hol-plan.md  setup.md
session-3-tool-use-agents/: hol-lab.ipynb  hol-plan.md
session-4-evals-reliability/: hol-lab.ipynb  hol-plan.md
shared/llm/: __init__.py  azure_openai_provider.py  base.py  bedrock_provider.py  factory.py
shared/utils/: env.py
