[project]
name = "shared"
version = "0.1.0"
description = "Provider-agnostic LLM helpers shared across the AI Developer training labs"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "openai>=1.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jupyterlab>=4.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*"]
